# Otsutil

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
otsutil/: __init__.py  classes.py  exceptions.py  funcs.py  otsutil.py  pickle_dict.py  types.py
