[metadata]
name = otsutil
version = 1.1.1
author = Otsuhachi
author_email = agequodagis.tufuiegoeris@gmail.com
description = A library of self-made functions to be reused.
long_description = file:README.md
url = https://github.com/Otsuhachi/otsutil
licence = MIT
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[options]
zip_safe = False
packages = find:

[wheel]
universal = 1
