[metadata]
name = otsutil
version = 2.6.0
author = Otsuhachi
author_email = agequodagis.tufuiegoeris@gmail.com
description = A library of self-made functions to be reused.
long_description_content_type = text/markdown
long_description = file:README.md
url = https://github.com/Otsuhachi/otsutil
license = MIT
classifier =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: Microsoft :: Windows :: Windows 10


[options]
zip_safe = False
packages = find:

[wheel]
universal = 1
